--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -10,6 +10,8 @@
             <br>
             <form action="{{ url_for('new_menu_item', restaurant_id=restaurant_id) }}" method='post'>
                 <input type='text' size='30' name='item-name' placeholder='Item Name'>
+                <input type='text' size='30' name='price' placeholder='price'>
+                <input type='text' size='30' name='description' placeholder='description'>
                 <input type='submit' value='Create Menu Item'>
                 <a href="{{ url_for('show_menu', restaurant_id=restaurant_id) }}">Cancel</a>
             </form>
