--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -26,7 +26,8 @@
             </div>
             {% if restaurants != [] %}
                 {% for r in restaurants %}
-                <h3> <span class="badge badge-secondary">{{ r.name }}</span></h3>
+                <a href="{{ url_for('show_menu',restaurant_id=r.id)}}">{{ r.name }}</a>
+                
                 
                             <div class="edit-delete-pane">
                                 <div>
