--- a/templates/editmenuitem.html
+++ b/templates/editmenuitem.html
@@ -9,6 +9,9 @@
             </div>
             <form action="{{ url_for('edit_menu_item', restaurant_id=restaurant_id, menu_id=edit_item.id) }}" method='post'>
                 <p>Name: <input type='text' size='30' name='item-name' placeholder='{{ edit_item.name }}'></p>
+                <p>Description: <input type='text' size='30' descriptio='description' placeholder='{{ edit_item.description }}'></p>
+                <p>Price: <input type='text' size='30' price='price' placeholder='{{ edit_item.price }}'></p>
+                
                 <input type='submit' value='Edit Restaurant'>
                 <a href="{{ url_for('show_menu', restaurant_id=restaurant_id) }}">Cancel</a>
             </form>
