--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -9,7 +9,7 @@
             </div>
             <br>
             <form action="{{ url_for('new_menu_item', restaurant_id=restaurant_id) }}" method='post'>
-                <input type='text' size='30' name='item-name' placeholder='Item Name'>
+                <input type='text' size='60' name='item-name' placeholder='Item_name'>
                 <input type='text' size='30' name='price' placeholder='price'>
                 <input type='text' size='30' name='description' placeholder='description'>
                 <input type='submit' value='Create Menu Item'>
