--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -2,6 +2,17 @@
     <head>
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
     </head>
+    <style>
+            .pane {
+                background-color: #333333;
+                border: 6px solid;
+                border-color: #999999;
+                border-radius: 46px;
+                left: 0%;
+                margin: -5px;
+                padding: 134px;
+                position: relative;
+    </style>
     <body>
         <div class="pane">
             <div class="header">
